adicionando articles e imagens

--- a/index.html
+++ b/index.html
@@ -8,108 +8,91 @@
   <title>Título</title>
 </head>
 <body>
-  <div class="conteiner">
-    <header class="cabecalho">
-      <h1 class="title">Título</h1>
-      <nav class="navegacao">
-        <ul class="link-cabecalho">
-          <li><a href="#" class="tagA">teste1</a></li>
-          <li><a href="#" class="tagA">teste2</a></li>
-          <li><a href="#" class="tagA">teste2</a></li>
-          <li><a href="#" class="tagA">teste3</a></li>
-          <li><a href="#" class="tagA">teste4</a></li>
-        </ul>
-      </nav>
-    </header>
-    <article class="article-inicial">
+  <section class="cabecalho">
+    <h1 class="title">Título</h1>
+  </section>
+  <section>
+    <nav class="navegacao">
+      <ul class="link-cabecalho">
+        <li class="tag-li"><a href="#" class="tagA">teste1</a></li>
+        <li class="tag-li"><a href="#" class="tagA">teste2</a></li>
+        <li class="tag-li"><a href="#" class="tagA">teste3</a></li>
+        <li class="tag-li"><a href="#" class="tagA">teste4</a></li>
+      </ul>
+    </nav>
+  </section>
+  <article class="article-inicial">
+    <section>
       <h3 class="artigos">Teste1</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel.</p>
+      <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
       <h3 class="artigos">Teste2</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
+      <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
       <h3 class="artigos">Teste3</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-    </article>
-    <!-- <div class="imagens-cards">
-      <figure class="lado-esquerdo">
-        <img src="imagens/saga1.jpg" alt="avatar" width="100%">
-        <section class="container">
-          <h4>Doe</h4>
-          <p><a href="#" target="_blank">1</a></p>
-        </section>
+      <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
+    </section>
+  </article>
+  <div>
+    <section class="imagens-cards">
+      <figure class="lado-esquerdo-1">
+        <a href="#"><img src="imagens/saga1.jpg" alt="avatar" width="100%"></a>
       </figure>
-      <figure class="lado-direito">
-        <img src="imagens/saga2.jpg" alt="avatar" width="100%">
-        <section class="container-dois">
-          <h4>John</h4>
-          <p><a href="#" target="_blank">2</a></p>
-        </section>
+      <figure class="lado-direito-1">
+        <a href="#"><img src="imagens/saga2.jpg" alt="avatar" width="100%"></a>
       </figure>
-      <figure class="card-um">
-        <img src="imagens/saga3.jpg" alt="avatar" width="100%">
-        <section class="container-tres">
-          <h4>poe</h4>
-          <p><a href="#" target="_blank">3</a></p>
-        </section>
+    </section>
+
+    <section class="imagens-cards">
+      <figure class="lado-esquerdo-2">
+        <a href="#"><img src="imagens/saga3.jpg" alt="avatar" width="100%"></a>
       </figure>
-      <figure class="card-dois">
-        <img src="imagens/saga4.jpg" alt="avatar" width="100%">
-        <section class="container-quatro">
-          <h4>marco</h4>
-          <p><a href="#" target="_blank">4</a></p>
-        </section>
+      <figure class="lado-direito-2">
+        <a href="#"><img src="imagens/saga4.jpg" alt="avatar" width="100%"></a>
       </figure>
-      <figure class="card-tres">
+    </section>
+
+    <section class="imagens-cards">
+      <figure class="lado-esquerdo-3">
         <img src="imagens/saga5.jpg" alt="avatar" width="100%">
-        <section class="container-cinco">
-          <h4>poe</h4>
-          <p><a href="#" target="_blank">3</a></p>
-        </section>
       </figure>
-      <figure class="card-quatro">
+      <figure class="lado-direito-3">
         <img src="imagens/saga6.jpg" alt="avatar" width="100%">
-        <section class="container-seis">
-          <h4>marco</h4>
-          <p><a href="#" target="_blank">4</a></p>
-        </section>
       </figure>
-      <section>
-        <div class="card-autor">
-          <img src="imagens/brianKV.jpg" alt="Avatar" width="100%">
-          <div class="container-autor">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-          </div>
-        </div>
-      </section>
-      <aside class="campo-aside">
-        <h2>Outras opções</h2>
-        <ol>
-          <li><a href="#">teste1</a></li>
-          <li><a href="#">teste2</a></li>
-          <li><a href="#">teste3</a></li>
-          <li><a href="#">teste4</a></li>
-        </ol>
-        <br>
-        <h2>Lançamentos</h2>
-        <table cellpadding="10" class="table">
-          <tr>
-            <th class="class-table">nec suscipit</th>
-            <th class="class-table">nec suscipit</th>
-            <th class="class-table">nec suscipit</th>
-            <th class="class-table">nec suscipit</th>
-            <th class="class-table">nec suscipit</th>
-            <th class="class-table">nec suscipit</th>
-          </tr>
-          <tr>
-            <td class="class-table">nec suscipit</td>
-            <td class="class-table">nec suscipit</td>
-            <td class="class-table">nec suscipit</td>
-            <td class="class-table">nec suscipit</td>
-            <td class="class-table">nec suscipit</td>
-            <td class="class-table">nec suscipit</td>
-          </tr>
-        </table>
-      </aside>
-    </div> -->
+    </section>
+
+    <!--<aside class="campo-aside">
+      <section class="lado-direito">
+      <div class="card-autor">
+        <img src="imagens/brianKV.jpg" alt="Avatar" width="100%">
+      </div>
+    </section>
+      <h2>Outras opções</h2>
+      <ol>
+        <li><a href="#">teste1</a></li>
+        <li><a href="#">teste2</a></li>
+        <li><a href="#">teste3</a></li>
+        <li><a href="#">teste4</a></li>
+      </ol>
+      <br>
+      <h2>Lançamentos</h2>
+      <table cellpadding="10" class="table">
+        <tr>
+          <th class="class-table">nec suscipit</th>
+          <th class="class-table">nec suscipit</th>
+          <th class="class-table">nec suscipit</th>
+          <th class="class-table">nec suscipit</th>
+          <th class="class-table">nec suscipit</th>
+          <th class="class-table">nec suscipit</th>
+        </tr>
+        <tr>
+          <td class="class-table">nec suscipit</td>
+          <td class="class-table">nec suscipit</td>
+          <td class="class-table">nec suscipit</td>
+          <td class="class-table">nec suscipit</td>
+          <td class="class-table">nec suscipit</td>
+          <td class="class-table">nec suscipit</td>
+        </tr>
+      </table>
+    </aside> -->
   </div>
   <!-- <footer class="rodape">
     <p>Conteúdo compilado por: Marylange Leal</p>
