--- a/index.html
+++ b/index.html
@@ -21,16 +21,50 @@
       </ul>
     </nav>
   </section>
+
   <article class="article-inicial">
     <section>
       <h3 class="artigos">Teste1</h3>
       <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
       <h3 class="artigos">Teste2</h3>
       <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-      <h3 class="artigos">Teste3</h3>
-      <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
+    </section>
+
+    <section>
+      <h3 class="titulo-tabela">Saga</h3>
+      <table class="tabela-aside">
+        <tr>
+          <th class="th">País de origem	</th>
+          <th class="th">Língua de origem	</th>
+          <th class="th">Editora(s)	</th>
+          <th class="th">Formato de publicação</th>
+          <th class="th">Primeira edição</th>
+          <th class="th">Gênero</th>
+          <th class="th">Argumento</th>
+          <th class="th">Desenho</th>
+          <th class="th">Personagens principais</th>
+        </tr>
+        <tr>
+          <td class="td">Estados unidos</td>
+          <td class="td">inglês</td>
+          <td class="td"><a href="https://pt.wikipedia.org/wiki/Image_Comics">Image Comics</a></td>
+          <td class="td">Série mensal</td>
+          <td class="td">14 de março de 2012</td>
+          <td class="td"><a href="https://pt.wikipedia.org/wiki/Space_opera">Space opera</a></td>
+          <td class="td">Brian K. Vaughan</td>
+          <td class="td">Fiona Staples</td>
+          <td class="td">Alana e Marko</td>
+        </tr>
+      </table>
+    </section>
+
+    <section class="autor">
+      <div class="card-autor">
+        <img src="imagens/1024px-10.12.12BrianKVaughanFionaStaplesByLuigiNovi1.jpg" alt="Avatar" width="100%">
+      </div>
     </section>
   </article>
+
   <div>
     <section class="imagens-cards">
       <figure class="lado-esquerdo-1">
@@ -52,47 +86,44 @@
 
     <section class="imagens-cards">
       <figure class="lado-esquerdo-3">
-        <img src="imagens/saga5.jpg" alt="avatar" width="100%">
+        <a href="#"><img src="imagens/saga5.jpg" alt="avatar" width="100%"></a>
       </figure>
       <figure class="lado-direito-3">
-        <img src="imagens/saga6.jpg" alt="avatar" width="100%">
+        <a href="#"><img src="imagens/saga6.jpg" alt="avatar" width="100%"></a>
       </figure>
     </section>
 
-    <!--<aside class="campo-aside">
-      <section class="lado-direito">
-      <div class="card-autor">
-        <img src="imagens/brianKV.jpg" alt="Avatar" width="100%">
-      </div>
+    <section class="imagens-cards">
+      <figure class="lado-esquerdo-4">
+        <a href="#"><img src="imagens/saga7.jpg" alt="avatar" width="100%"></a>
+      </figure>
+      <figure class="lado-direito-4">
+        <a href="#"><img src="imagens/saga8.jpeg" alt="avatar" width="100%"></a>
+      </figure>
     </section>
-      <h2>Outras opções</h2>
-      <ol>
-        <li><a href="#">teste1</a></li>
-        <li><a href="#">teste2</a></li>
-        <li><a href="#">teste3</a></li>
-        <li><a href="#">teste4</a></li>
-      </ol>
-      <br>
-      <h2>Lançamentos</h2>
-      <table cellpadding="10" class="table">
-        <tr>
-          <th class="class-table">nec suscipit</th>
-          <th class="class-table">nec suscipit</th>
-          <th class="class-table">nec suscipit</th>
-          <th class="class-table">nec suscipit</th>
-          <th class="class-table">nec suscipit</th>
-          <th class="class-table">nec suscipit</th>
-        </tr>
-        <tr>
-          <td class="class-table">nec suscipit</td>
-          <td class="class-table">nec suscipit</td>
-          <td class="class-table">nec suscipit</td>
-          <td class="class-table">nec suscipit</td>
-          <td class="class-table">nec suscipit</td>
-          <td class="class-table">nec suscipit</td>
-        </tr>
-      </table>
-    </aside> -->
+
+    <section class="imagens-cards">
+      <figure class="meio-pagina">
+        <a href="#"><img src="imagens/saga9.jpg" alt="avatar" width="100%"></a>
+      </figure>
+    </section>
+
+    <aside class="campo-aside">
+      <section class="titulo-aside-ingles">
+        <h3>Leia o volume Um em inglês aqui!</h3>
+        <nav class="navegacao">
+          <ol class="link-aside">
+            <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-1?id=1301" class="tagA">Saga issue #1</a></li>
+            <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-2?id=1325" class="tagA">Saga issue #2</a></li>
+            <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-3?id=1344" class="tagA">Saga issue #3</a></li>
+            <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-4?id=1346&__cf_chl_jschl_tk__=9887cefd7c5fa65ae4ac037e3fac7e62213dbd6c-1588982532-0-AT5HiEH7dPh1Rd1jiRE8tEyTV1_SoAYmINdk1SOMGEsj_EXtC0pVxiMRSm-yNphqGjm7L4QaKwjq_ItPjw9AONnGA7Zy_CcV27JQKBGlup__LyRClsxRnz3Y2zUWLu93agtQ0NyHodlZRQ603nzaV2Rr_fgTXqMOSt1H8gbRjTmSelh7QHysKPHS_Se27lJeD2u5ZR3NvCZE2WAvqvsjMTgu4MztSO9hkTfop6ufCvX8yOw-UNwfYCMYwPWmdeut-dka1neg2fNtwLyz8nlWvwajKw73MiGZE8m6z4YyP337KcaBsgtAcWTIaTVQ8EbTlg" class="tagA">Saga issue #4</a></li>
+            <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-5?id=1347" class="tagA">Saga issue #5</a></li>
+            <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-6?id=1348" class="tagA">Saga issue #6</a></li>
+          </ol>
+        </nav>
+      </section>
+    </aside>
+
   </div>
   <!-- <footer class="rodape">
     <p>Conteúdo compilado por: Marylange Leal</p>
