--- a/index.html
+++ b/index.html
@@ -5,34 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Título</title>
+  <title>Saga</title>
 </head>
 <body>
   <section class="cabecalho">
-    <h1 class="title">Título</h1>
+    <h1 class="title">Saga</h1>
   </section>
-  <section>
-    <nav class="navegacao">
-      <ul class="link-cabecalho">
-        <li class="tag-li"><a href="#" class="tagA">teste1</a></li>
-        <li class="tag-li"><a href="#" class="tagA">teste2</a></li>
-        <li class="tag-li"><a href="#" class="tagA">teste3</a></li>
-        <li class="tag-li"><a href="#" class="tagA">teste4</a></li>
-      </ul>
-    </nav>
-  </section>
+  <nav class="navegacao">
+    <ul class="link-cabecalho">
+      <li class="tag-li"><a href="#" class="tagA">teste1</a></li>
+      <li class="tag-li"><a href="#" class="tagA">teste2</a></li>
+      <li class="tag-li"><a href="#" class="tagA">teste3</a></li>
+      <li class="tag-li"><a href="#" class="tagA">teste4</a></li>
+    </ul>
+  </nav>
 
   <article class="article-inicial">
-    <section>
+    <section class="sessao-artigo-1">
       <h3 class="artigos">Teste1</h3>
       <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
+      <div class="card-autor-desenhista">
+        <img  src="imagens/1024px-10.12.12BrianKVaughanFionaStaplesByLuigiNovi1.jpg" alt="foto do autor ao lado da desenhista de Saga" width="100%">
+      </div>
+    </section>
+    <section class="sessao-artigo-2">
       <h3 class="artigos">Teste2</h3>
       <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-    </section>
-
-    <section>
-      <h3 class="titulo-tabela">Saga</h3>
-      <table class="tabela-aside">
+      <p class="titulo-tabela">Saga - Origem do Quadrinho</p>
+      <table class="tabela">
         <tr>
           <th class="th">País de origem	</th>
           <th class="th">Língua de origem	</th>
@@ -57,55 +57,58 @@
         </tr>
       </table>
     </section>
-
-    <section class="autor">
-      <div class="card-autor">
-        <img src="imagens/1024px-10.12.12BrianKVaughanFionaStaplesByLuigiNovi1.jpg" alt="Avatar" width="100%">
-      </div>
+    <section class="sessao-artigo-3">
+      <h3 class="artigos">Teste3</h3>
+      <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla,
+      molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
+      <iframe class="video" src="https://www.youtube.com/embed/7nnmQoYxESE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
   </article>
 
   <div>
-    <section class="imagens-cards">
-      <figure class="lado-esquerdo-1">
-        <a href="#"><img src="imagens/saga1.jpg" alt="avatar" width="100%"></a>
-      </figure>
-      <figure class="lado-direito-1">
-        <a href="#"><img src="imagens/saga2.jpg" alt="avatar" width="100%"></a>
-      </figure>
-    </section>
+    <section class="quadrinhos">
+      <h2>Quadrinhos Lançados no Brasil</h2>
+      <section class="imagens-cards">
+        <figure class="lado-esquerdo-1">
+          <a href="#"><img src="imagens/saga1.jpg" alt="avatar" width="100%"></a>
+        </figure>
+        <figure class="lado-direito-1">
+          <a href="#"><img src="imagens/saga2.jpg" alt="avatar" width="100%"></a>
+        </figure>
+      </section>
 
-    <section class="imagens-cards">
-      <figure class="lado-esquerdo-2">
-        <a href="#"><img src="imagens/saga3.jpg" alt="avatar" width="100%"></a>
-      </figure>
-      <figure class="lado-direito-2">
-        <a href="#"><img src="imagens/saga4.jpg" alt="avatar" width="100%"></a>
-      </figure>
-    </section>
+      <section class="imagens-cards">
+        <figure class="lado-esquerdo-2">
+          <a href="#"><img src="imagens/saga3.jpg" alt="avatar" width="100%"></a>
+        </figure>
+        <figure class="lado-direito-2">
+          <a href="#"><img src="imagens/saga4.jpg" alt="avatar" width="100%"></a>
+        </figure>
+      </section>
 
-    <section class="imagens-cards">
-      <figure class="lado-esquerdo-3">
-        <a href="#"><img src="imagens/saga5.jpg" alt="avatar" width="100%"></a>
-      </figure>
-      <figure class="lado-direito-3">
-        <a href="#"><img src="imagens/saga6.jpg" alt="avatar" width="100%"></a>
-      </figure>
-    </section>
+      <section class="imagens-cards">
+        <figure class="lado-esquerdo-3">
+          <a href="#"><img src="imagens/saga5.jpg" alt="avatar" width="100%"></a>
+        </figure>
+        <figure class="lado-direito-3">
+          <a href="#"><img src="imagens/saga6.jpg" alt="avatar" width="100%"></a>
+        </figure>
+      </section>
 
-    <section class="imagens-cards">
-      <figure class="lado-esquerdo-4">
-        <a href="#"><img src="imagens/saga7.jpg" alt="avatar" width="100%"></a>
-      </figure>
-      <figure class="lado-direito-4">
-        <a href="#"><img src="imagens/saga8.jpeg" alt="avatar" width="100%"></a>
-      </figure>
-    </section>
+      <section class="imagens-cards">
+        <figure class="lado-esquerdo-4">
+          <a href="#"><img src="imagens/saga7.jpg" alt="avatar" width="100%"></a>
+        </figure>
+        <figure class="lado-direito-4">
+          <a href="#"><img src="imagens/saga8.jpeg" alt="avatar" width="100%"></a>
+        </figure>
+      </section>
 
-    <section class="imagens-cards">
-      <figure class="meio-pagina">
-        <a href="#"><img src="imagens/saga9.jpg" alt="avatar" width="100%"></a>
-      </figure>
+      <section class="imagens-cards">
+        <figure class="meio-pagina">
+          <a href="#"><img src="imagens/saga9.jpg" alt="avatar" width="100%"></a>
+        </figure>
+      </section>
     </section>
 
     <aside class="campo-aside">
@@ -125,8 +128,15 @@
     </aside>
 
   </div>
-  <!-- <footer class="rodape">
-    <p>Conteúdo compilado por: Marylange Leal</p>
-  </footer> -->
+  <section>
+    <p class="achecker">
+      <a href="https://achecker.ca/checker/index.php?uri=referer&gid=WCAG2-AA">
+        <img src = "https://achecker.ca/images/icon_W2_aa.jpg" alt = "WCAG 2.0 (nível AA)" height = "32" width = "102" />
+      </a>
+    </p>
+    <footer class="rodape">
+      <p>Conteúdo compilado por: Marylange Leal com inspiração no quadrinho Saga</p>
+    </footer>
+</section>
 </body>
 </html>
