--- a/index.html
+++ b/index.html
@@ -8,135 +8,140 @@
   <title>Saga</title>
 </head>
 <body>
-  <section class="cabecalho">
-    <h1 class="title">Saga</h1>
-  </section>
-  <nav class="navegacao">
-    <ul class="link-cabecalho">
-      <li class="tag-li"><a href="#" class="tagA">teste1</a></li>
-      <li class="tag-li"><a href="#" class="tagA">teste2</a></li>
-      <li class="tag-li"><a href="#" class="tagA">teste3</a></li>
-      <li class="tag-li"><a href="#" class="tagA">teste4</a></li>
-    </ul>
-  </nav>
-
-  <article class="article-inicial">
-    <section class="sessao-artigo-1">
-      <h3 class="artigos">Teste1</h3>
-      <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-      <div class="card-autor-desenhista">
-        <img  src="imagens/1024px-10.12.12BrianKVaughanFionaStaplesByLuigiNovi1.jpg" alt="foto do autor ao lado da desenhista de Saga" width="100%">
-      </div>
+  <div class="centro">
+    <section class="cabecalho">
+      <h1>Saga</h1>
     </section>
-    <section class="sessao-artigo-2">
-      <h3 class="artigos">Teste2</h3>
-      <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-      <p class="titulo-tabela">Saga - Origem do Quadrinho</p>
-      <table class="tabela">
-        <tr>
-          <th class="th">País de origem	</th>
-          <th class="th">Língua de origem	</th>
-          <th class="th">Editora(s)	</th>
-          <th class="th">Formato de publicação</th>
-          <th class="th">Primeira edição</th>
-          <th class="th">Gênero</th>
-          <th class="th">Argumento</th>
-          <th class="th">Desenho</th>
-          <th class="th">Personagens principais</th>
-        </tr>
-        <tr>
-          <td class="td">Estados unidos</td>
-          <td class="td">inglês</td>
-          <td class="td"><a href="https://pt.wikipedia.org/wiki/Image_Comics">Image Comics</a></td>
-          <td class="td">Série mensal</td>
-          <td class="td">14 de março de 2012</td>
-          <td class="td"><a href="https://pt.wikipedia.org/wiki/Space_opera">Space opera</a></td>
-          <td class="td">Brian K. Vaughan</td>
-          <td class="td">Fiona Staples</td>
-          <td class="td">Alana e Marko</td>
-        </tr>
-      </table>
-    </section>
-    <section class="sessao-artigo-3">
-      <h3 class="artigos">Teste3</h3>
-      <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla,
-      molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-      <iframe class="video" src="https://www.youtube.com/embed/7nnmQoYxESE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </section>
-  </article>
-
-  <div>
-    <section class="quadrinhos">
-      <h2>Quadrinhos Lançados no Brasil</h2>
-      <section class="imagens-cards">
-        <figure class="lado-esquerdo-1">
-          <a href="#"><img src="imagens/saga1.jpg" alt="avatar" width="100%"></a>
-        </figure>
-        <figure class="lado-direito-1">
-          <a href="#"><img src="imagens/saga2.jpg" alt="avatar" width="100%"></a>
-        </figure>
+    <nav class="navegacao">
+      <ul class="teste">
+        <li class="tag-li"><a href="#">teste1</a></li>
+        <li class="tag-li"><a href="#">teste2</a></li>
+        <li class="tag-li"><a href="#">teste3</a></li>
+        <li class="tag-li"><a href="#">teste4</a></li>
+      </ul>
+    </nav>
+    <!--------------------------------->
+    <article class="article-inicial">
+      <section class="sessao-artigo">
+        <h3>Teste1</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
+        <div class="card-autor-desenhista">
+          <img  src="imagens/1024px-10.12.12BrianKVaughanFionaStaplesByLuigiNovi1.jpg" alt="foto do autor ao lado da desenhista de Saga" width="80%">
+        </div>
       </section>
 
-      <section class="imagens-cards">
-        <figure class="lado-esquerdo-2">
-          <a href="#"><img src="imagens/saga3.jpg" alt="avatar" width="100%"></a>
-        </figure>
-        <figure class="lado-direito-2">
-          <a href="#"><img src="imagens/saga4.jpg" alt="avatar" width="100%"></a>
-        </figure>
+      <!--------------------------------->
+
+      <!--<section class="sessao-artigo">
+        <h3 class="artigos">Teste2</h3>
+        <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
+        <p class="titulo-tabela">Saga - Origem do Quadrinho</p>
+        <table class="tabela">
+          <tr>
+            <th class="th">País de origem	</th>
+            <th class="th">Língua de origem	</th>
+            <th class="th">Editora(s)	</th>
+            <th class="th">Formato de publicação</th>
+            <th class="th">Primeira edição</th>
+            <th class="th">Gênero</th>
+            <th class="th">Argumento</th>
+            <th class="th">Desenho</th>
+            <th class="th">Personagens principais</th>
+          </tr>
+          <tr>
+            <td class="td">Estados unidos</td>
+            <td class="td">inglês</td>
+            <td class="td"><a href="https://pt.wikipedia.org/wiki/Image_Comics">Image Comics</a></td>
+            <td class="td">Série mensal</td>
+            <td class="td">14 de março de 2012</td>
+            <td class="td"><a href="https://pt.wikipedia.org/wiki/Space_opera">Space opera</a></td>
+            <td class="td">Brian K. Vaughan</td>
+            <td class="td">Fiona Staples</td>
+            <td class="td">Alana e Marko</td>
+          </tr>
+        </table>
+      </section>
+      <section class="sessao-artigo">
+        <h3 class="artigos">Teste3</h3>
+        <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla,
+        molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
+        <iframe class="video" src="https://www.youtube.com/embed/7nnmQoYxESE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </section>-->
+    </article>
+
+    <!-- <div>
+      <section class="quadrinhos">
+        <h2>Quadrinhos Lançados no Brasil</h2>
+        <section class="imagens-cards">
+          <figure class="lado-esquerdo-1">
+            <a href="#"><img src="imagens/saga1.jpg" alt="avatar" width="100%"></a>
+          </figure>
+          <figure class="lado-direito-1">
+            <a href="#"><img src="imagens/saga2.jpg" alt="avatar" width="100%"></a>
+          </figure>
+        </section>
+
+        <section class="imagens-cards">
+          <figure class="lado-esquerdo-2">
+            <a href="#"><img src="imagens/saga3.jpg" alt="avatar" width="100%"></a>
+          </figure>
+          <figure class="lado-direito-2">
+            <a href="#"><img src="imagens/saga4.jpg" alt="avatar" width="100%"></a>
+          </figure>
+        </section>
+
+        <section class="imagens-cards">
+          <figure class="lado-esquerdo-3">
+            <a href="#"><img src="imagens/saga5.jpg" alt="avatar" width="100%"></a>
+          </figure>
+          <figure class="lado-direito-3">
+            <a href="#"><img src="imagens/saga6.jpg" alt="avatar" width="100%"></a>
+          </figure>
+        </section>
+
+        <section class="imagens-cards">
+          <figure class="lado-esquerdo-4">
+            <a href="#"><img src="imagens/saga7.jpg" alt="avatar" width="100%"></a>
+          </figure>
+          <figure class="lado-direito-4">
+            <a href="#"><img src="imagens/saga8.jpeg" alt="avatar" width="100%"></a>
+          </figure>
+        </section>
+
+        <section class="imagens-cards">
+          <figure class="meio-pagina">
+            <a href="#"><img src="imagens/saga9.jpg" alt="avatar" width="100%"></a>
+          </figure>
+        </section>
       </section>
 
-      <section class="imagens-cards">
-        <figure class="lado-esquerdo-3">
-          <a href="#"><img src="imagens/saga5.jpg" alt="avatar" width="100%"></a>
-        </figure>
-        <figure class="lado-direito-3">
-          <a href="#"><img src="imagens/saga6.jpg" alt="avatar" width="100%"></a>
-        </figure>
-      </section>
+      <aside class="campo-aside">
+        <section class="titulo-aside-ingles">
+          <h3>Leia o volume Um em inglês aqui!</h3>
+          <nav class="navegacao">
+            <ol class="link-aside">
+              <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-1?id=1301" class="tagA">Saga issue #1</a></li>
+              <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-2?id=1325" class="tagA">Saga issue #2</a></li>
+              <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-3?id=1344" class="tagA">Saga issue #3</a></li>
+              <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-4?id=1346&__cf_chl_jschl_tk__=9887cefd7c5fa65ae4ac037e3fac7e62213dbd6c-1588982532-0-AT5HiEH7dPh1Rd1jiRE8tEyTV1_SoAYmINdk1SOMGEsj_EXtC0pVxiMRSm-yNphqGjm7L4QaKwjq_ItPjw9AONnGA7Zy_CcV27JQKBGlup__LyRClsxRnz3Y2zUWLu93agtQ0NyHodlZRQ603nzaV2Rr_fgTXqMOSt1H8gbRjTmSelh7QHysKPHS_Se27lJeD2u5ZR3NvCZE2WAvqvsjMTgu4MztSO9hkTfop6ufCvX8yOw-UNwfYCMYwPWmdeut-dka1neg2fNtwLyz8nlWvwajKw73MiGZE8m6z4YyP337KcaBsgtAcWTIaTVQ8EbTlg" class="tagA">Saga issue #4</a></li>
+              <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-5?id=1347" class="tagA">Saga issue #5</a></li>
+              <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-6?id=1348" class="tagA">Saga issue #6</a></li>
+            </ol>
+          </nav>
+        </section>
+      </aside>
 
-      <section class="imagens-cards">
-        <figure class="lado-esquerdo-4">
-          <a href="#"><img src="imagens/saga7.jpg" alt="avatar" width="100%"></a>
-        </figure>
-        <figure class="lado-direito-4">
-          <a href="#"><img src="imagens/saga8.jpeg" alt="avatar" width="100%"></a>
-        </figure>
-      </section>
-
-      <section class="imagens-cards">
-        <figure class="meio-pagina">
-          <a href="#"><img src="imagens/saga9.jpg" alt="avatar" width="100%"></a>
-        </figure>
-      </section>
-    </section>
-
-    <aside class="campo-aside">
-      <section class="titulo-aside-ingles">
-        <h3>Leia o volume Um em inglês aqui!</h3>
-        <nav class="navegacao">
-          <ol class="link-aside">
-            <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-1?id=1301" class="tagA">Saga issue #1</a></li>
-            <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-2?id=1325" class="tagA">Saga issue #2</a></li>
-            <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-3?id=1344" class="tagA">Saga issue #3</a></li>
-            <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-4?id=1346&__cf_chl_jschl_tk__=9887cefd7c5fa65ae4ac037e3fac7e62213dbd6c-1588982532-0-AT5HiEH7dPh1Rd1jiRE8tEyTV1_SoAYmINdk1SOMGEsj_EXtC0pVxiMRSm-yNphqGjm7L4QaKwjq_ItPjw9AONnGA7Zy_CcV27JQKBGlup__LyRClsxRnz3Y2zUWLu93agtQ0NyHodlZRQ603nzaV2Rr_fgTXqMOSt1H8gbRjTmSelh7QHysKPHS_Se27lJeD2u5ZR3NvCZE2WAvqvsjMTgu4MztSO9hkTfop6ufCvX8yOw-UNwfYCMYwPWmdeut-dka1neg2fNtwLyz8nlWvwajKw73MiGZE8m6z4YyP337KcaBsgtAcWTIaTVQ8EbTlg" class="tagA">Saga issue #4</a></li>
-            <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-5?id=1347" class="tagA">Saga issue #5</a></li>
-            <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-6?id=1348" class="tagA">Saga issue #6</a></li>
-          </ol>
-        </nav>
-      </section>
-    </aside>
-
-  </div>
-  <section>
-    <p class="achecker">
-      <a href="https://achecker.ca/checker/index.php?uri=referer&gid=WCAG2-AA">
-        <img src = "https://achecker.ca/images/icon_W2_aa.jpg" alt = "WCAG 2.0 (nível AA)" height = "32" width = "102" />
-      </a>
-    </p>
-    <footer class="rodape">
-      <p>Conteúdo compilado por: Marylange Leal com inspiração no quadrinho Saga</p>
-    </footer>
-</section>
+    </div>
+    <section>
+      <p class="achecker">
+        <a href="https://achecker.ca/checker/index.php?uri=referer&gid=WCAG2-AA">
+          <img src = "https://achecker.ca/images/icon_W2_aa.jpg" alt = "WCAG 2.0 (nível AA)" height = "32" width = "102" />
+        </a>
+      </p>
+      <footer class="rodape">
+        <p>Conteúdo compilado por: Marylange Leal com inspiração no quadrinho Saga</p>
+      </footer>
+  </section>-->
+</div>
 </body>
 </html>
