--- a/index.html
+++ b/index.html
@@ -25,17 +25,15 @@
       <section class="sessao-artigo">
         <h3>Teste1</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-        <div class="card-autor-desenhista">
-          <img  src="imagens/1024px-10.12.12BrianKVaughanFionaStaplesByLuigiNovi1.jpg" alt="foto do autor ao lado da desenhista de Saga" width="80%">
-        </div>
+        <img class="img-criadores" src="imagens/1024px-10.12.12BrianKVaughanFionaStaplesByLuigiNovi1.jpg" alt="foto do autor ao lado da desenhista de Saga" width="80%">
       </section>
 
       <!--------------------------------->
 
-      <!--<section class="sessao-artigo">
-        <h3 class="artigos">Teste2</h3>
-        <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-        <p class="titulo-tabela">Saga - Origem do Quadrinho</p>
+      <section class="sessao-artigo">
+        <h3>Teste2</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
+        <h4 class="titulo-tabela">Saga - Origem do Quadrinho</h4>
         <table class="tabela">
           <tr>
             <th class="th">País de origem	</th>
@@ -61,7 +59,7 @@
           </tr>
         </table>
       </section>
-      <section class="sessao-artigo">
+      <!--<section class="sessao-artigo">
         <h3 class="artigos">Teste3</h3>
         <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla,
         molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
